manifests/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-httproute
  namespace: longhorn-system
spec:
  parentRefs:
  - name: envoy
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "longhorn.ashishverma.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
      kind: Service
      group: ""
      weight: 1
